[package]
name = "todocrab"
version = "0.1.0"
edition = "2021"
description = "A simple todo list TUI"
license = "GPL-3.0-only"
repository = "https://github.com/QuinnB73/todocrab"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
